set(STREAM_TARGET_EXECUTABLE "test_stream")
set(STREAM_MANAGER_API_TARGET_EXECUTABLE "test_StreamManagerApi")
set(DirectoryName "python")
 
install(DIRECTORY ${PROJECT_SOURCE_DIR}/${DirectoryName} DESTINATION ${PROJECT_SOURCE_DIR}/dist)
 
add_test(NAME ${STREAM_TARGET_EXECUTABLE}
        COMMAND python3 "${STREAM_TARGET_EXECUTABLE}.py"
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/${DirectoryName})
set_tests_properties(${STREAM_TARGET_EXECUTABLE} PROPERTIES
        ENVIRONMENT PYTHONPATH=${PROJECT_SOURCE_DIR}/../output/arm-gcc4/mxStream/python/:$ENV{PYTHONPATH})


add_test(NAME ${STREAM_MANAGER_API_TARGET_EXECUTABLE}
        COMMAND python3 "${STREAM_MANAGER_API_TARGET_EXECUTABLE}.py"
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/${DirectoryName})
set_tests_properties(${STREAM_MANAGER_API_TARGET_EXECUTABLE} PROPERTIES
        ENVIRONMENT PYTHONPATH=${PROJECT_SOURCE_DIR}/../output/arm-gcc4/mxStream/python/:$ENV{PYTHONPATH})