# CMake minimum version number requirements
cmake_minimum_required(VERSION 3.14.1)
project(tik_warpperspective)

if(DEFINED ENV{ASCEND_HOME_PATH})
    set(ASCEND_HOME_PATH $ENV{ASCEND_HOME_PATH})
else()
    set(ASCEND_HOME_PATH "/usr/local/Ascend/ascend-toolkit/latest")
endif()

if(EXISTS "${CMAKE_CURRENT_BINARY_DIR}/kernel_meta/warp_perspective_uint8.o")
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/kernel_meta/warp_perspective_uint8.o DESTINATION ${CMAKE_INSTALL_PREFIX}/operators/kernel_meta/)
else()
    install(FILES /tmp/warp_perspective_uint8.o DESTINATION ${CMAKE_INSTALL_PREFIX}/operators/kernel_meta/)
endif()
if(EXISTS "${CMAKE_CURRENT_BINARY_DIR}/kernel_meta/warp_perspective_float32.o")
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/kernel_meta/warp_perspective_float32.o DESTINATION ${CMAKE_INSTALL_PREFIX}/operators/kernel_meta/)
else()
    install(FILES /tmp/warp_perspective_float32.o DESTINATION ${CMAKE_INSTALL_PREFIX}/operators/kernel_meta/)
endif()
if(EXISTS "${CMAKE_CURRENT_BINARY_DIR}/kernel_meta/warp_perspective_float16.o")
    install(FILES ${CMAKE_CURRENT_BINARY_DIR}/kernel_meta/warp_perspective_float16.o DESTINATION ${CMAKE_INSTALL_PREFIX}/operators/kernel_meta/)
else()
    install(FILES /tmp/warp_perspective_float16.o DESTINATION ${CMAKE_INSTALL_PREFIX}/operators/kernel_meta/)
endif()