set(TARGET_EXECUTABLE "VersionTest")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/Common)

file(GLOB_RECURSE SOURCE_FILES ${PROJECT_SOURCE_DIR}/Common/VersionTest.cpp)
add_executable(${TARGET_EXECUTABLE} ${SOURCE_FILES})

target_link_libraries(${TARGET_EXECUTABLE} mxbase gtest mockcpp)

install(FILES ${PROJECT_SOURCE_DIR}/Common/version.info DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

add_test(NAME ${TARGET_EXECUTABLE}
        COMMAND ${TARGET_EXECUTABLE} --gtest_output=xml
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/Common)
