add_subdirectory(Asynchron)
add_subdirectory(Tensor)
add_subdirectory(TensorTik)
add_subdirectory(TensorOperations)
add_subdirectory(GlobalInit)
add_subdirectory(DvppPool)
add_subdirectory(Model)
add_subdirectory(Image)
add_subdirectory(ImageProcessor)
add_subdirectory(VideoDecoder)
#add_subdirectory(VideoEncoder)