set(TARGET_EXECUTABLE "ErrorCodeTest")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/ErrorCode)

file(GLOB_RECURSE SOURCE_FILES ./*.cpp)

add_executable(${TARGET_EXECUTABLE} ${SOURCE_FILES})
target_link_libraries(${TARGET_EXECUTABLE} mxbase gtest)

install(DIRECTORY ${PROJECT_SOURCE_DIR}/ErrorCode/GetAppErrCodeInfo DESTINATION ${PROJECT_SOURCE_DIR}/dist/ErrorCode)
install(DIRECTORY ${PROJECT_SOURCE_DIR}/ErrorCode/GetError DESTINATION ${PROJECT_SOURCE_DIR}/dist/ErrorCode)

add_test(NAME ${TARGET_EXECUTABLE}
        COMMAND ${TARGET_EXECUTABLE} --gtest_output=xml
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/ErrorCode)
